--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,9 @@
 name: NuxSigns
 main: com.bukkit.N4th4.NuxSigns.NuxSigns
-version: 1.2
+version: 1.3
 depend:
     - PermissionsEx
+    - LogBlock
 commands:
     sign:
         description: All of the NuxSigns commands
