Add the possibility to edit sign with right click

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.getspout</groupId>
+            <artifactId>spoutapi</artifactId>
+            <version>dev-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
 	<dependency>
             <groupId>de.diddiz</groupId>
             <artifactId>logblock</artifactId>
